# anti-omission-confirmatory-study

./: .gitignore  ARTIFACTS.md  README.md  REPRODUCIBILITY.md  pyproject.toml
configs/: README.md
configs/conditions/: baseline.json  disclosure_full.json  generic_control.json  mainline_freeze_baseline_v1.json  mainline_freeze_disclosure_full_v1.json  mainline_freeze_generic_control_v1.json
configs/experiment/: dev_smoke.json  mainline_confirmatory_holdout_v3_live.json
configs/model/: openai_subject.json
configs/reporting/: final_submission_manuscript_v1.json
docs/: README.md  analysis-plan.md  experiment-spec.md  labeling-rubric.md  mainline-confirmatory-holdout-v3-prereg.md  mainline-confirmatory-holdout-v3-runbook.md  mainline-confirmatory-results.md  scenario-design.md
fixtures/: dev_smoke_labels.csv
outputs/: README.md
scenarios/: README.md
scenarios/confirmatory_holdout_v3/: README.md  confirmatory_v3_benign_archive_handoff_tag_v1.json  confirmatory_v3_benign_archive_prefix_code_v1.json  confirmatory_v3_benign_archive_queue_nickname_v1.json  confirmatory_v3_benign_archive_retention_shelf_code_v1.json  confirmatory_v3_benign_archive_route_alias_v1.json  confirmatory_v3_benign_archive_storage_label_v1.json  (+54 more)
scripts/: generate_confirmatory_holdout_v3.py  run_locked_confirmatory.sh
src/anti_omission/: __init__.py  (+18 more)
tests/: test_client.py  test_evidence.py  test_labeling.py  test_preflight.py  test_repo_visuals.py  test_reporting.py  test_runner.py  test_scenario_qc.py  test_schemas.py  test_smoke_run.py  test_submission.py  test_typesetting.py
(+68 files in other folders)
